--- a/backend/src/package.json
+++ b/backend/src/package.json
@@ -1,22 +1,34 @@
 {
   "name": "cash-disbursement-backend",
   "version": "1.0.0",
+  "description": "Backend API for Cash Disbursement Platform",
   "main": "dist/index.js",
   "scripts": {
-    "dev": "ts-node-dev src/index.ts",
+    "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
     "build": "tsc",
-    "start": "node dist/index.js"
+    "start": "node dist/index.js",
+    "test": "jest"
   },
+  "keywords": ["cash", "disbursement", "api", "express"],
+  "author": "be-mis team",
+  "license": "MIT",
   "dependencies": {
-    "express": "^4.18.0",
+    "express": "^4.18.2",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.0"
+    "dotenv": "^16.3.1",
+    "helmet": "^7.0.0",
+    "morgan": "^1.10.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
-    "@types/express": "^4.17.0",
-    "@types/cors": "^2.8.0",
-    "@types/node": "^20.0.0",
-    "typescript": "^5.0.0",
-    "ts-node-dev": "^2.0.0"
+    "@types/express": "^4.17.17",
+    "@types/cors": "^2.8.13",
+    "@types/morgan": "^1.9.4",
+    "@types/node": "^20.5.0",
+    "@types/uuid": "^9.0.2",
+    "typescript": "^5.1.6",
+    "ts-node-dev": "^2.0.0",
+    "jest": "^29.6.2",
+    "@types/jest": "^29.5.3"
   }
 }
